[package]
name = "id-bars"
version = "0.1.0"
authors = ["Jiri Zajpt <jzajpt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
csv = "1"
serde = "1"
serde_derive = "1"
itertools = "0.8"
chrono = "^0.4.6"
num-traits = "0.2.6"
average = "0.9.3"
statrs = "0.10.0"

